# tensorslow

./: .gitignore  README.MD  setup.cfg
docs/: genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_sources/api/: modules.rst.txt  tensorslow.operations.rst.txt  tensorslow.optimisers.rst.txt
docs/api/: modules.html  tensorslow.data.html  tensorslow.html  tensorslow.layers.html  tensorslow.operations.html  tensorslow.optimisers.html
sphinx/: build_docs.sh  conf.py  index.rst  readme.rst
sphinx/api/: tensorslow.data.rst  tensorslow.layers.rst  tensorslow.rst
tensorslow/: __init__.py  approx.py  constants.py  gradient_tape.py  model.py  tensor.py
tensorslow/data/: datasets.py
tensorslow/layers/: __init__.py  base.py
tensorslow/layers/_layers/: linear.py  relu.py  softmax_cross_entropy.py
tensorslow/operations/: __init__.py  base.py
tensorslow/operations/_operations/: addition.py  matrix_multiplication.py  multiplication.py  relu.py  softmax_cross_entropy_with_logits.py
tensorslow/optimisers/: __init__.py  base.py
tensorslow/optimisers/_optimisers/: sgd.py
tests/: conftest.py  types.py
tests/learning_tests/: test_examples.py
tests/unit/: test_gradient_tape.py  test_layers.py  test_operations.py
tests/unit/operations/: test_addition.py  test_matrix_multiplication.py  test_relu.py  test_softmax_cross_entropy_with_logits.py
