[metadata]
name = tensorslow
version = 0.0
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy == 1.19.5
    idx2numpy

[options.extras_require]
dev =
    pytest == 6.2.5
    isort == 5.9.3
    black == 20.8b1
    sphinx == 4.2.0
    tox == 3.24.4
    mypy
    sphinx_rtd_theme == 1.0.0

[tool:isort]
profile = black
known_first_party = tensorslow
known_third_party =
    numpy
skip = .tox

[tool:pytest]
minversion = 6.0
addopts = -ra -q -m "not learning"
testpaths =
    tests

markers =
    learning

filterwarnings =
    ignore::DeprecationWarning


[mypy]
plugins = numpy.typing.mypy_plugin
disallow_untyped_defs = True
disallow_any_unimported = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = True
show_error_codes = True
warn_unused_configs = True
files = 
    tensor
    

[tox:tox]
envlist = py39

[testenv]
whitelist_externals =
    make
    sphinx-apidoc
extras = dev
commands =
    pytest
    sphinx-apidoc -o ./sphinx ./tensorslow
    make -C sphinx/ html

[testenv:format]
whitelist_externals =
    isort
    black
commands =
    mypy .
    isort .
    black --line-length=120 setup.py tensorslow tests
